--- a/adminator3/phpstan-baseline.neon
+++ b/adminator3/phpstan-baseline.neon
@@ -10,30 +10,30 @@ parameters:
 			count: 2
 			path: app/Auth/Password.php
 
-		-
-			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:authenticate\\(\\)\\.$#"
-			count: 1
-			path: app/Controllers/Auth/AuthController.php
+		# -
+		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:authenticate\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Controllers/Auth/AuthController.php
 
-		-
-			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
-			count: 2
-			path: app/Controllers/Auth/AuthController.php
+		# -
+		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
+		# 	count: 2
+		# 	path: app/Controllers/Auth/AuthController.php
 
-		-
-			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:guest\\(\\)\\.$#"
-			count: 1
-			path: app/Controllers/Auth/AuthController.php
+		# -
+		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:guest\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Controllers/Auth/AuthController.php
 
-		-
-			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:logout\\(\\)\\.$#"
-			count: 1
-			path: app/Controllers/Auth/AuthController.php
+		# -
+		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:logout\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Controllers/Auth/AuthController.php
 
-		-
-			message: "#^Offset 'persist' on array\\{email\\: mixed, password\\: mixed\\} in isset\\(\\) does not exist\\.$#"
-			count: 1
-			path: app/Controllers/Auth/AuthController.php
+		# -
+		# 	message: "#^Offset 'persist' on array\\{email\\: mixed, password\\: mixed\\} in isset\\(\\) does not exist\\.$#"
+		# 	count: 1
+		# 	path: app/Controllers/Auth/AuthController.php
 
 		-
 			message: "#^Constructor of class App\\\\Controllers\\\\Auth\\\\PasswordController has an unused parameter \\$flash\\.$#"
@@ -50,15 +50,15 @@ parameters:
 		# 	count: 1
 		# 	path: app/Controllers/adminatorController.php
 
-		-
-			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
-			count: 1
-			path: app/Controllers/adminatorController.php
+		# -
+		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Controllers/adminatorController.php
 
-		-
-			message: "#^Function ereg not found\\.$#"
-			count: 1
-			path: app/Controllers/archivZmenController.php
+		# -
+		# 	message: "#^Function ereg not found\\.$#"
+		# 	count: 1
+		# 	path: app/Controllers/archivZmenController.php
 
 		-
 			message: "#^If condition is always true\\.$#"
