--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
     build:
       context: ./
       target: main
+      args:
+        progress: plain
     # user: "www-data:www-data"
     # https://github.com/compose-spec/compose-spec/blob/master/develop.md
     develop:
