add locking for vlastnici2change, fix migration (#169)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,11 +40,13 @@ services:
     #     restart: true
 
   fpm:
-    image: h-software/isp-net-adminator-fpm
+    image: h-software/isp-net-adminator-fpm:latest
     # image: ghcr.io/h-software/isp-net-adminator:pr-137
     build:
       context: ./
       target: main
+      args:
+        progress: plain
     # user: "www-data:www-data"
     # https://github.com/compose-spec/compose-spec/blob/master/develop.md
     develop:
