--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -23,8 +23,10 @@
         "monolog/monolog": "^3.6.0",
         "respect/validation": "^2.2",
         "formr/formr": "^1.5",
-        "illuminate/database": "^10.48",
-        "illuminate/events": "^v10.0",
+        "illuminate/database": "^10.48.10",
+        "illuminate/events": "^v10.48.10",
+        "illuminate/cache": "^10.48.10",
+        "illuminate/pagination": "^10.48.10",
         "cartalyst/sentinel": "^v7.0",
         "nyholm/psr7": "^1.4.1",
         "nyholm/psr7-server": "^1.0.2",
@@ -33,7 +35,6 @@
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
         "lloricode/laravel-html-table": "^2.1",
-        "illuminate/pagination": "^10.48",
         "evilfreelancer/routeros-api-php": "1.5.2",
         "robmorgan/phinx": "^0.12.10",
         "open-telemetry/opentelemetry-auto-slim": "^1.0.5",
