--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -19,9 +19,7 @@ parameters:
 	-
 		message: "#^Function mysql_.* not found\\.$#"
 		path: include/main.function.shared.php
-	-
-		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
-		path: app/Core/*/*.class.php
 	# -
 	# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
-	# 	path: app/Core/shared/*.php
+	# 	path: app/Core/*/*.class.php
+
