--- a/adminator3/phpstan-baseline.neon
+++ b/adminator3/phpstan-baseline.neon
@@ -266,12 +266,12 @@ parameters:
 		-
 			message: "#^Deprecated in PHP 8\\.0\\: Required parameter \\$conAfter follows optional parameter \\$conList\\.$#"
 			count: 1
-			path: app/Core/PagingGlobal.php
+			path: app/Core/Items/listing.stb.class.php
 
 		-
 			message: "#^Deprecated in PHP 8\\.0\\: Required parameter \\$conBefore follows optional parameter \\$conList\\.$#"
 			count: 1
-			path: app/Core/PagingGlobal.php
+			path: app/Core/Items/listing.stb.class.php
 
 		-
 			message: "#^Call to an undefined static method App\\\\Models\\\\PartnerOrder\\:\\:create\\(\\)\\.$#"
