--- a/adminator3/phpstan-baseline.neon
+++ b/adminator3/phpstan-baseline.neon
@@ -1,34 +1,10 @@
 parameters:
 	ignoreErrors:
-		-
-			message: "#^Parameter \\#1 \\$app of class Illuminate\\\\Cache\\\\CacheManager constructor expects Illuminate\\\\Contracts\\\\Foundation\\\\Application, Illuminate\\\\Container\\\\Container given\\.$#"
-			count: 1
-			path: boostrap/containerAfter.php
 
-		-
-			message: "#^Access to an undefined property Cartalyst\\\\Sentinel\\\\Users\\\\UserInterface\\:\\:\\$email\\.$#"
-			count: 2
-			path: app/Controllers/Auth/AuthController.php
-
-		-
-			message: "#^Call to an undefined method Odan\\\\Session\\\\SessionInterface\\:\\:isStarted\\(\\)\\.$#"
-			count: 2
-			path: app/Middleware/SessionMiddleware.php
-
-		-
-			message: "#^Call to an undefined method Odan\\\\Session\\\\SessionInterface\\:\\:regenerateId\\(\\)\\.$#"
-			count: 1
-			path: app/Middleware/SessionMiddleware.php
-
-		-
-			message: "#^Call to an undefined method Odan\\\\Session\\\\SessionInterface\\:\\:start\\(\\)\\.$#"
-			count: 1
-			path: app/Middleware/SessionMiddleware.php
-		-
-			message: "#^Call to an undefined static method App\\\\Models\\\\User\\:\\:where\\(\\)\\.$#"
-			count: 1
-			path: app/Auth/Password.php
-
+		# -
+		# 	message: "#^Call to an undefined static method App\\\\Models\\\\User\\:\\:where\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Auth/Password.php
 		-
 			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
 			count: 2
@@ -38,7 +14,6 @@ parameters:
 			message: "#^Constructor of class App\\\\Controllers\\\\Auth\\\\PasswordController has an unused parameter \\$flash\\.$#"
 			count: 1
 			path: app/Controllers/Auth/PasswordController.php
-
 
 		-
 			message: "#^If condition is always true\\.$#"
@@ -54,8 +29,6 @@ parameters:
 			message: "#^Variable \\$updated in isset\\(\\) is never defined\\.$#"
 			count: 1
 			path: app/Controllers/archivZmenController.php
-
-
 
 		-
 			message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
@@ -102,10 +75,10 @@ parameters:
 		# 	count: 1
 		# 	path: app/Core/ArchivZmenUcetni.php
 
-		-
-			message: "#^Call to an undefined static method App\\\\Models\\\\FakturacniSkupina\\:\\:get\\(\\)\\.$#"
-			count: 1
-			path: app/Core/Customer/fakturacniSkupiny.class.php
+		# -
+		# 	message: "#^Call to an undefined static method App\\\\Models\\\\FakturacniSkupina\\:\\:get\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Core/Customer/fakturacniSkupiny.class.php
 
 		# -
 		# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
@@ -238,10 +211,10 @@ parameters:
 			count: 1
 			path: app/Core/Item/stb.class.php
 
-		-
-			message: "#^Call to an undefined static method App\\\\Models\\\\Stb\\:\\:where\\(\\)\\.$#"
-			count: 1
-			path: app/Core/Item/stb.class.php
+		# -
+		# 	message: "#^Call to an undefined static method App\\\\Models\\\\Stb\\:\\:where\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Core/Item/stb.class.php
 
 		-
 			message: "#^If condition is always true\\.$#"
@@ -268,15 +241,15 @@ parameters:
 			count: 1
 			path: app/Core/Item/listing.stb.class.php
 
-		-
-			message: "#^Call to an undefined static method App\\\\Models\\\\PartnerOrder\\:\\:create\\(\\)\\.$#"
-			count: 1
-			path: app/Core/Partner/partner.class.php
+		# -
+		# 	message: "#^Call to an undefined static method App\\\\Models\\\\PartnerOrder\\:\\:create\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Core/Partner/partner.class.php
 
-		-
-			message: "#^Call to an undefined static method App\\\\Models\\\\PartnerOrder\\:\\:get\\(\\)\\.$#"
-			count: 1
-			path: app/Core/Partner/partner.class.php
+		# -
+		# 	message: "#^Call to an undefined static method App\\\\Models\\\\PartnerOrder\\:\\:get\\(\\)\\.$#"
+		# 	count: 1
+		# 	path: app/Core/Partner/partner.class.php
 
 
 		-
