--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -45,7 +45,8 @@
         "amnuts/opcache-gui": "^3.5.4",
         "phpoffice/phpspreadsheet": "^2.1",
         "open-feature/sdk": "^2.0.6",
-        "open-feature/flagd-provider": "0.7"
+        "open-feature/flagd-provider": "0.7",
+        "odan/phinx-migrations-generator": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
