--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -31,6 +31,7 @@
         "nyholm/psr7": "^1.4.1",
         "nyholm/psr7-server": "^1.0.2",
         "symfony/http-foundation": "^v6.4",
+        "symfony/psr-http-message-bridge": "^7.0",
         "odan/session": "^6.1",
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
@@ -79,7 +80,7 @@
             "tests/AdminatorTestCase.php",
             "tests/Twig-View/TestCase.php"
         ]
-        
+
     },
     "scripts": {
         "dump": "composer dump-autoload -a",
