tests: move asserts into separate class

--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -78,6 +78,7 @@
         },
         "files": [
             "tests/AdminatorTestCase.php",
+            "tests/AdminatorAsserts.php",
             "tests/Twig-View/TestCase.php"
         ]
 
