tests: refator creating request

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,7 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.php]
+# php_diagnostic_php6401 = false
+php_diagnostic = true
