--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -15,7 +15,7 @@ parameters:
 	-
 		message: "#^Variable \\$user in isset\\(\\) is never defined\\.$#"
 		count: 1
-		path: app/Core/shared/partner.servis.class.php
+		path: app/Core/Partner/partner.servis.class.php
 	# common known issues
 	-
 		message: '#Undefined variable: \$.*#'
@@ -53,10 +53,6 @@ parameters:
 		path: app/Middleware/SessionMiddleware.php
 
 	# adminator2 dont have DI container with sentinel
-	-
-		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
-		count: 1
-		path: app/Core/shared/partner.servis.class.php
 	-
 		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:guest\\(\\)\\.$#"
 		count: 1
