--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -64,7 +64,8 @@
         "misantron/dbunit": "^5.3",
         "php-mock/php-mock-phpunit": "^2.10",
         "fakerphp/faker": "^1.2",
-        "laminas/laminas-test": "4.7.*"
+        "symfony/dom-crawler": "^7.0",
+        "symfony/css-selector": "^7.0"
     },
     "suggest": {
         "illuminate/database": "By default, Sentinel utilizes the powerful Illuminate database layer.",
