--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -63,7 +63,9 @@
         "mnapoli/phpunit-easymock": "^1.3",
         "misantron/dbunit": "^5.3",
         "php-mock/php-mock-phpunit": "^2.10",
-        "fakerphp/faker": "^1.2"
+        "fakerphp/faker": "^1.2",
+        "symfony/dom-crawler": "^7.0",
+        "symfony/css-selector": "^7.0"
     },
     "suggest": {
         "illuminate/database": "By default, Sentinel utilizes the powerful Illuminate database layer.",
